Fixing extra margin on social media icons in header

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -238,7 +238,6 @@
 			float: right;
 			overflow: auto;
 			text-align: center;
-			margin: 10px 0;
 
 			> li {
 				display: inline-block;
